salt/downloads/bugs/fixes/bug_issue_descriptions/salt-61885
I am trying to set up a MariaDB external job cache.  I have checked that the salt master can connect to the mariadb with the correct credentials but when I add them to the master config I see the following errors in the log:

```
[salt.loader      :1730][ERROR   ][127030] Failed to import returner mysql, this is due most likely to a syntax error:
Traceback (most recent call last):
  File "/usr/lib/python3/dist-packages/salt/loader.py", line 1707, in _load_module
    mod = spec.loader.load_module()
  File "<frozen importlib._bootstrap_external>", line 388, in _check_name_wrapper
  File "<frozen importlib._bootstrap_external>", line 809, in load_module
  File "<frozen importlib._bootstrap_external>", line 668, in load_module
  File "<frozen importlib._bootstrap>", line 268, in _load_module_shim
  File "<frozen importlib._bootstrap>", line 693, in _load
  File "<frozen importlib._bootstrap>", line 673, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 665, in exec_module
  File "<frozen importlib._bootstrap>", line 222, in _call_with_frames_removed
  File "/usr/lib/python3/dist-packages/salt/returners/mysql.py", line 166, in <module>
    import MySQLdb.cursors
  File "/usr/local/lib/python3.5/dist-packages/MySQLdb/cursors.py", line 191
    except TypeError, m:
                    ^
SyntaxError: invalid syntax

 `[salt.loader      :1730][ERROR   ][127030] Failed to import module mysql, this is due most likely to a syntax error:
Traceback (most recent call last):
  File "/usr/lib/python3/dist-packages/salt/loader.py", line 1707, in _load_module
    mod = spec.loader.load_module()
  File "<frozen importlib._bootstrap_external>", line 388, in _check_name_wrapper
  File "<frozen importlib._bootstrap_external>", line 809, in load_module
  File "<frozen importlib._bootstrap_external>", line 668, in load_module
  File "<frozen importlib._bootstrap>", line 268, in _load_module_shim
  File "<frozen importlib._bootstrap>", line 693, in _load
  File "<frozen importlib._bootstrap>", line 673, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 665, in exec_module
  File "<frozen importlib._bootstrap>", line 222, in _call_with_frames_removed
  File "/usr/lib/python3/dist-packages/salt/modules/mysql.py", line 55, in <module>
    import MySQLdb.cursors
  File "/usr/local/lib/python3.5/dist-packages/MySQLdb/cursors.py", line 191
    except TypeError, m:
                    ^
```

relevant master config: 

```
master_job_cache: mysql
mysql.host: 'HOST'
mysql.user: 'USER'
mysql.pass: 'PASS'
mysql.db: 'DB'
mysql.port: PORT
```

salt versions report:

```
Salt Version:
          Salt: 3002.7

Dependency Versions:
          cffi: 1.5.2
      cherrypy: 3.5.0
      dateutil: 2.4.2
     docker-py: Not Installed
         gitdb: 0.6.4
     gitpython: 1.0.1
        Jinja2: 2.8
       libgit2: 0.24.0
      M2Crypto: Not Installed
          Mako: Not Installed
       msgpack: 0.6.2
  msgpack-pure: Not Installed
  mysql-python: 1.2.5
     pycparser: 2.14
      pycrypto: 2.6.1
  pycryptodome: 3.4.7
        pygit2: 0.24.0
        Python: 3.5.2 (default, Jan 26 2021, 13:30:48)
  python-gnupg: 0.3.8
        PyYAML: 3.11
         PyZMQ: 17.1.2
         smmap: 0.9.0
       timelib: Not Installed
       Tornado: 4.5.3
           ZMQ: 4.1.4

System Versions:
          dist: ubuntu 16.04 Xenial Xerus
        locale: UTF-8
       machine: x86_64
       release: 4.4.0-210-generic
        system: Linux
       version: Ubuntu 16.04 Xenial Xerus
```


